{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 6,
  "lineage": "61c4a03a-8560-b41f-c0ae-56dcd0da3d09",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sg_test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565102900668:vpc/vpc-07979ce40805aa778",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.0.0.0/16",
            "default_network_acl_id": "acl-09513953ec49ec830",
            "default_route_table_id": "rtb-0d362395a24b97409",
            "default_security_group_id": "sg-09b44d2b4233fb341",
            "dhcp_options_id": "dopt-0dbada08eb0e57db8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07979ce40805aa778",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d362395a24b97409",
            "owner_id": "565102900668",
            "tags": {
              "Name": "sg_test_vpc"
            },
            "tags_all": {
              "Name": "sg_test_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg_test",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:565102900668:security-group/sg-0de45fadb4ca97690",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0de45fadb4ca97690",
            "ingress": [],
            "name": "sg_test",
            "name_prefix": "",
            "owner_id": "565102900668",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-07979ce40805aa778"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sg_test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.test_sg_egress",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2035157743",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0de45fadb4ca97690",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sg_test_vpc",
            "module.sg_test.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_sg_ingress[\"http\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "http",
            "from_port": 80,
            "id": "sgrule-2999882423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0de45fadb4ca97690",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sg_test_vpc",
            "module.sg_test.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_sg_ingress[\"ssh\"]",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "133.202.194.241/32",
              "192.168.99.100/32"
            ],
            "description": "ssh",
            "from_port": 22,
            "id": "sgrule-3034968136",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0de45fadb4ca97690",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sg_test_vpc",
            "module.sg_test.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}